--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <h3>Formation</h3>
     <ul>
-        <li><strong>LICENCE INFORMATIQUE PARCOURS NUMERIQUE POUR LES ENVIRONNEMENTS CONNECTÉS</strong> | 2022-2024 | UNIVERSITÉ DE PAU ET PAYS DE L’ADOUR | ANGLET, FRANCE
+        <li><strong>Licence informatique parcours numerique pour les environnements connectés</strong> | 2022-2024 | UNIVERSITÉ DE PAU ET PAYS DE L’ADOUR | ANGLET, FRANCE
             <ul>
                 <li>Spécialisation : Licence Mention Informatique</li>
                 <li>Option : Parcours Numérique pour les environnements connectés</li>
@@ -25,24 +25,317 @@
                 </li>
             </ul>
         </li>
-        <!-- Add other education items here -->
+
+        <li><strong>Classe préparatoires aux grandes écoles</strong> | 2020-2022 | École Nationale Superieure en Sciences et Technologies de l'informatique et du Numerique (ESTIN) | Béjaia, Algérie
+            <ul>
+                <li>Spécialisation : Mention Mathématiques et Informatique</li>
+                <li>Admis au Concours National d’accès au cycle ingénieur 2022</li>
+                <li>Cours : 
+                    <ul>
+                        <li>Compréhension des systèmes d'exploitation, de l'architecture des ordinateurs, et des structures de fichiers.</li>
+                        <li>Acquisition des bases mathématiques en analyse, algèbre, algorithmique, et structures de données</li>
+                        <li>Apprentissage de domaines variés tels que la mécanique du point, l'électronique fondamentale, l'optique et les ondes</li>
+                        <li>Formation en économie d'entreprise pour une compréhension globale du contexte professionnel.</li>
+                        <li>Introduction aux systèmes d'information pour une vision complète des enjeux informatiques dans les organisations.</li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+
+        <li><strong>Baccalauréat Mathématiques</strong> | 2020 | Lycée Chouhada Annani | Béjaia, Algérie
+            <ul>
+                <li>Spécialisation : Mathématiques</li>
+                <li>Mention : Bien (15.71/20)</li>
+                <li>Cours : 
+                    <ul>
+                        <li>Compétences en Résolution de Problèmes</li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+
     </ul>
 
     <h3>Compétences</h3>
-    <!-- Structure similar to Formation section -->
+    <ul>
+        <li><strong>Langues</strong>
+            <ul>
+                <li>Français : TCF - C2</li>
+                <li>Anglais: C1 - "General English Cambridge University “ - B2 TOEIC</li>
+                <li>Langue Kabyle</li>
+                <li>Langue Arabe</li>
+            </ul>
+        </li>
+        <li><strong>Savoir-faire téchnique</strong>
+            <ul>
+                <li><strong>Langages de programmation :</strong>  Java, C, Assembleur, Python, PHP.</li>
+                <li><strong>Systèmes d’exploitation :</strong>  CISCO IOS, Linux, Windows.</li>
+                <li><strong>Bases de données :</strong>  MySQL, PostgreSQL, Oracle, phpMyAdmin.</li>
+                <li><strong>Développement web, mobile :</strong>  HTML, CSS, JS, PHP, Android Studio, Java, Swift.</li>
+            </ul>
+        </li>
+        <li><strong>Savoir-être professionnels</strong>
+            <ul>
+                <li>Travailler en équipe</li>
+                <li>Faire preuve d'autonomie.</li>
+                <li>Faire preuve de rigueur et de précision.</li>
+                <li>Être à l'écoute</li>
+                <li>S'adapter aux changements</li>
+                <li>Faire preuve de curiosité, créativité, d'inventivité</li>
+                <li>Prendre des initiatives et être force de proposition</li>
+                <li>Organiser son travail selon les priorités et les objectifs</li>
+            </ul>
+        </li>
+    </ul>   
 
     <h3>Projets</h3>
-    <!-- Structure similar to Formation section -->
+    <ul>
+        <li>
+            <strong>Projet Pilotage d'Operations | office 64 de l’habitat | Decembre 2023 | Bayonne</strong> <br>
+            Mise en place d'un logiciel répondant aux besoins des équipes permettant le suivi précis de l'avancement des chantiers.
+        </li>
+        <li>
+            <strong>Projet migration GED | office 64 de l’habitat | octobre 2023 | Bayonne</strong><br>
+            Mise en place et paramétrage de la technologie permettant la gestion électronique des documents (DOCUWARE/ERP PIH de Aareon/SQL).
+        </li>
+        <li>
+            <strong>Projet Publipostage | OFFICE 64 DE L’HABITAT | OCTOBRE 2023 | Bayonne</strong><br>
+            Développement full stack d'une application Node.js, permettant de faire des rendus dynamiques utilisant l'API carbonne.io Javascript - Docker - Oracle ORDS - SQL).
+        </li>
+        <li>
+            <strong>Projet Intégrateur Application mobile | o’Petit bonheur | Avril 2023 | Pau</strong><br>
+            Développement Mobile - JAVA / Android Studio.
+        </li>
+
+        <li><strong>Base de données| Suivi d'indicateurs santé</strong><br>
+            Conception et implémentation en PostgreSQL.
+        </li>
+        <li>
+            <strong>Site Web | Club de Natation</strong><br>
+            Développement Site Web front-Back, (HTML - CSS - JS) et (Django - Python), Création Charte Graphique.
+        </li>
+</ul>
+
 
     <h3>Expérience</h3>
-    <!-- Structure similar to Formation section -->
+    <ul>
+        <li>
+            <strong>Altérnance chef de projet système d’informations | Office 64 de l’habitat | septembre 2023-en cours (fin de contrat en aout 2024) | Bayonne</strong><br>
+            Conçoit, développe et met au point un projet d'application informatique, de la phase d'étude à son intégration.
+        </li>
+        <li>
+            <strong>Poissonnier | Carrefour | septembre 2023 – en cours (fin de CONTRAT juin 2024) | Bayonne</strong><br>
+            Peut gérer un commerce de détail alimentaire.
+            Réalise la préparation de poissons, crustacés et coquillages selon les règles d'hygiène et de sécurité alimentaires et la réglementation du commerce.
+        </li>
+        <li>
+            <strong>Sapeur pompier volontaire | SDIS 06 | JUINS août 2023 | Menton CÔTE D’AZUR</strong><br>
+            Réaliser la prévention de risques.
+            Coordonner une équipe.
+            Réalise les interventions de secours, d'assistance à personnes.
+            Peut mener des actions de surveillance et de sauvetage en milieu aquatique.
+            Capacité à rédiger des comptes-rendus précis et détaillés sur les interventions réalisées, en fournissant des informations clé sur les événements.
+        </li>
+    </ul>
 
     <h3>Volontariat et Bénévolat</h3>
-    <!-- Structure similar to Formation section -->
+    <ul>
+        <li>
+            <strong>ADHÉRENT À L’ASSOCIATION SPORTIVE UNIVERSITAIRE | AS UPPA | 2022 - 2024 | ANGLET</strong><br>
+            Organise et anime des activités sportives dans une ou plusieurs disciplines afin de former ou d'entraîner le public selon ses besoins (loisirs, initiation, compétition, ...) et les règles de sécurité des personnes.
+            Participation à l’encadrement de plusieurs événements sportifs universitaires.
+        </li>
+        <li>
+            <strong>ÉQUIPIER secouriste | BIARRITZ sauvetage CÔTIER | décembre - mars 2023 | BIARRITZ</strong><br>
+            Participation à l’encadrement de plusieurs dispositifs prévisionnels de secours.
+            Événements tels que des matchs de rugby de Top 14 et de Div2/Marathon international de Biarritz.
+        </li>
+        <li>
+            <strong>Entraîneur initiateur en NATATION | ÉTOILE SPORTIVE madala | 2021 - 2022 | BÉJAÏA, ALGÉRIE</strong><br>
+            Organise et anime des activités sportives dans une ou plusieurs disciplines afin de former ou entraîner le public selon ses besoins (loisirs, initiation, compétition, ...) et les règles de sécurité des personnes.
+            Peut coordonner l'activité d'une équipe et l'encadrement technique d'une discipline ou spécialité sportive.
+        </li>
+        <li>
+            <strong>MEMBRE DE L’ong internationale aiesec | COMITÉ de BÉJAÏA | 2021-2022 | BÉJAÏA, ALGÉRIE</strong><br>
+            <ul>
+                <li>Designer | Département B2C | Fonction MKT-Marketing | août 2021 – janvier 2022</li>
+                <li>Crée tout ou partie d'éléments graphiques et visuels en vue de produire un document imprimé, audiovisuel ou multimédia.</li>
+            </ul>
+            <ul>
+                <li>Membre Département TM&MXP | Talent Management | février 2022 - avril 2022</li>
+                <li>Met en œuvre la politique de recrutement ou de formation selon les orientations stratégiques de la structure et les objectifs de développement visés.</li>
+            </ul>
+        </li>
+    </ul>
 
     <h3>Diplômes et Certifications</h3>
-    <!-- Structure similar to Formation section -->
+    <ul>
+        <li>
+            <strong>Brevet national de sécurité et de sauvetage aquatique | Biarritz Sauvetage Côtier | Mars 2023</strong><br>
+            <ul>
+                <li>Prévenir les usagers des risques de la baignade par une information explicite, et des conditions météorologiques permettant ou non la baignade.</li>
+                <li>Surveiller la zone de baignade, en observant particulièrement les comportements des individus, et en essayant d'anticiper les dérives afin d'intervenir au plus vite.</li>
+                <li>Intervenir rapidement et efficacement dans les cas de noyade, sans mettre en danger sa vie ni celle des autres.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Premiers Secours en Équipe de niveau 1 et 2</strong><br>
+            <ul>
+                <li>Évoluer dans le cadre juridique applicable à son action de secours et dans le respect des procédures définies par son autorité d'emploi.</li>
+                <li>Assurer une protection immédiate, adaptée et permanente, pour lui-même, la victime et les autres personnes des dangers environnants.</li>
+                <li>Réaliser un bilan et d'assurer sa transmission aux services appropriés.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Diplôme Initiateur Natation</strong><br>
+            <ul>
+                <li>Initier, enseigner, encadrer tout type de public (enfants, adultes et seniors) à des activités aquatiques.</li>
+                <li>Mettre en place des actions pédagogiques d’éveil et d’animation permettant la découverte et l’apprentissage des activités nautiques.</li>
+                <li>Connaître, maîtriser et entretenir les matériels adéquats à l’activité.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>SURVEILLANT BAIGNADE et ACTIVITÉS NAUTIQUE</strong><br>
+            <ul>
+                <li>Capacité à élaborer et à valider la planification des surveillances, y compris la gestion des effectifs et des astreintes.</li>
+                <li>Compétence à assurer la communication interne au sein du poste de secours, en fournissant des consignes claires et en informant les équipiers.</li>
+                <li>Capacité à coordonner les actions avec d'autres entités, y compris le Cta/Codis, les autorités responsables des plages, et d'autres services (CROSS, forces de l'ordre).</li>
+                <li>Aptitude à communiquer efficacement avec le public en fournissant des informations sur les conditions météorologiques, les marées, etc.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Introduction to Project Management</strong> -
+             Apr 2024 -
+             Project Management · Agile Project Management · Project Planning · Software Project Management
+        </li>
+        <!-- IBM The AI Ladder: A Framework for Deploying AI in your Enterprise -->
+        <li>
+            <strong>The AI Ladder: A Framework for Deploying AI in your Enterprise</strong> -
+             Avr 2024 -
+             Artificial Intelligence (AI)
+        </li>
+        <!-- LambdaTest Test Automation Professional Certificate -->
+        <li>
+            <strong>LambdaTest Test Automation Professional Certificate</strong> -
+             Jui 2023 -
+             Test Automation
+        </li>
+        <!-- LinkedIn Mobile Testing with Appium -->
+        <li>
+            <strong>Mobile Testing with Appium</strong> -
+             Jui 2023 -
+             Appium
+        </li>
+        <!-- Sololearn Python Intermediate -->
+        <li>
+            <strong>Python Intermediate</strong> -
+             Jui 2023 -
+             Python (Programming Language)
+        </li>
+        <!-- Sololearn SQL Intermediate -->
+        <li>
+            <strong>SQL Intermediate</strong> -
+             Jui 2023 -
+             SQL
+        </li>
+        <!-- LinkedIn Selenium Essential Training -->
+        <li>
+            <strong>Selenium Essential Training</strong> -
+             Jui 2023 -
+             Selenium
+        </li>
+        <!-- LinkedIn Jenkins Essential Training -->
+        <li>
+            <strong>Jenkins Essential Training</strong> -
+             Mai 2023 -
+             Jenkins
+        </li>
+        <!-- LinkedIn Learning Jenkins -->
+        <li>
+            <strong>Learning Jenkins</strong> -
+             Mai 2023 -
+             Jenkins
+        </li>
+        <!-- LinkedIn Software Testing Foundations: Test Techniques -->
+        <li>
+            <strong>Software Testing Foundations: Test Techniques</strong> -
+             May 2023 -
+             Software Testing
+        </li>
+        <!-- LinkedIn Software Testing/QA -->
+        <li>
+            <strong>Software Testing/QA</strong> -
+             Mai 2023 -
+             Quality Assurance · Software Quality Assurance
+        </li>
+        <!-- LinkedIn Test Automation Foundations -->
+        <li>
+            <strong>Test Automation Foundations</strong> -
+             May 2023 -
+             Test Automation
+        </li>
+        <!-- LinkedIn Understanding Manual Testing -->
+        <li>
+            <strong>Understanding Manual Testing</strong> -
+             Mai 2023 -
+             Manual Testing · Quality Assurance
+        </li>
+        <!-- Cisco Introduction to Cybersecurity -->
+        <li>
+            <strong>Introduction to Cybersecurity</strong> -
+             Avr 2023 -
+             Cybersecurity
+        </li>
+        <!-- Oracle ORACLE - Artificial Intelligence with Machine Learning -->
+        <li>
+            <strong>ORACLE - Artificial Intelligence with Machine Learning</strong> -
+             Avr 2023 -
+             Machine Learning · Artificial Intelligence (AI)
+        </li>
+        <!-- Oracle ORACLE- JFo Java Foundations Learner -->
+        <li>
+            <strong>ORACLE- JFo Java Foundations Learner</strong> -
+             Avr 2023 -
+             Object-Oriented Programming (OOP) · Java
+        </li>
 
+        <!-- Visme Visme Presentation Certification -->
+        <li>
+            <strong>Visme Presentation Certification</strong> -
+             Avr 2021 -
+             Design
+        </li>
+        <!-- Cisco Networking Academy IoT Fundamentals: Connecting Things -->
+        <li>
+            <strong>IoT Fundamentals: Connecting Things</strong> -
+             Nov 2022 -
+             Internet of Things (IoT)
+        </li>
+        <!-- EDUCBA Build Responsive Website Using HTML5, CSS3, JS and Bootstrap -->
+        <li>
+            <strong>Build Responsive Website Using HTML5, CSS3, JS and Bootstrap</strong> -
+             Dec 2021 -
+             Cascading Style Sheets (CSS) · HTML · Web Design · Bootstrap
+        </li>
+        <!-- Coursera Introduction to Big Data -->
+        <li>
+            <strong>Introduction to Big Data</strong> -
+             Dec 2021 -
+             Big Data
+        </li>
+        <!-- IBM Python for Data Science -->
+        <li>
+            <strong>Python for Data Science</strong> -
+             Dec 2021 -
+             Python (Programming Language)
+        </li>
+        <!-- AIESEC in Sri Lanka Silk Roads Cultural Exchange -->
+        <li>
+            <strong>Silk Roads Cultural Exchange</strong> -
+             Oct 2021 -
+             Cultural Exchange
+        </li>
+    </ul>
     <h3>Centres d'intérêt</h3>
     <ul>
         <li>Voyage</li>
